--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
   },
   "dependencies": {
     "core-js": "^2.6.5",
+    "postcss-px-to-viewport": "^1.1.1",
     "vant": "^2.2.6",
     "vue": "^2.6.10",
     "vue-router": "^3.0.3"
@@ -51,7 +52,17 @@
   },
   "postcss": {
     "plugins": {
-      "autoprefixer": {}
+      "autoprefixer": {},
+      "postcss-px-to-viewport": {
+        "viewportWidth": 750,
+        "viewportUnit": "vmin",
+        "minPixelValue": 1,
+        "selectorBlackList": [
+          "van",
+          ".ignore",
+          ".hairlines"
+        ]
+      }
     }
   },
   "browserslist": [
